--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,9 +3,11 @@
 
 <div class="row">
   <div class="col">
-    <dbz-list></dbz-list>
+    <!--(eventDeleteCharacter) onDeleteCharacter -->
+    <dbz-list [characterList]="characters" (eventDeleteCharacterById)="onDeleteCharacterById($event)"></dbz-list>
   </div>
   <div class="col">
-    <dbz-add-caracter></dbz-add-caracter>
+
+    <dbz-add-caracter (eventNewCharacter)="onNewCharacter($event)"></dbz-add-caracter>
   </div>
 </div>
