--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,4 +1,4 @@
-<h4>Agregar Personaje</h4>
+<h4>Agregar Personajes</h4>
       <form class="row" (ngSubmit)="emitCharacter()">
         <input type="text" [(ngModel)]="character.name" name="name" class="form-control mb-2" placeholder="Nombre">
         <input type="number" [(ngModel)]="character.power" name="power" class="form-control mb-2" placeholder="Poder">
